[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-message-exporter"
dynamic = ["version"]
description = "Offline recovery and export tool for Telegram Desktop (macOS)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pycryptodomex>=3.20.0",
  "mmh3==5.2.0",
  "sqlcipher3>=0.5.2",
]

[project.scripts]
telegram-exporter = "telegram_message_exporter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
